# Chakravyuh

./: .dockerignore  .gitignore  AUDIT.md  AUDIT_V2.md  Blog.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  Dockerfile  FAQ.md  LICENSE  MODEL_CARD.md  Makefile  README.md  REPRODUCE.md  SECURITY.md  WIN_PLAN.md  openenv.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  keepwarm.yml  weekly_reproduce.yml
chakravyuh_env/: __init__.py  augmented_templates.json  benign_augmented.json  benign_augmented_v2.json  benign_templates.json  environment.py  explanation_judge.py  multiturn_templates.json  novelty.py  openenv_client.py  openenv_environment.py  openenv_models.py  paraphrase_templates.json  regional_templates.json  reward.py  rubrics.py  scam_novel.json  scammer_templates.json  schemas.py
chakravyuh_env/agents/: __init__.py  analyzer.py  bank_monitor.py  base.py  llm_analyzer.py  regulator.py  scammer.py  victim.py
data/: v1_v2_archived_responses.json
data/chakravyuh-bench-v0/: README.md  baselines.json  scenarios.jsonl  schema.json
docs/: CHAKRAVYUH_EXECUTION_PLAN.md  CHAKRAVYUH_IMPROVEMENTS.md  CHAKRAVYUH_WIN_PLAN.md  COMPETITOR_SCAN.md  DESIGN_DECISIONS.md  EXTEND.md  LIVE_PITCH.md  POSTMORTEM_FUTURE.md  Q_AND_A_REHEARSAL.md  RESPONSIBLE_USE.md  RISK_REGISTER.md  ablation_episode_rollouts.md  ablation_study.md  architecture.md  architecture.mmd  before_after_5_real_cases.md  before_after_example.json  benchmark_comparison.md  blog_post.md  chakravyuh_slides.html  chakravyuh_slides.md  compute_carbon_card.md  dress_rehearsal_log.md  failure_taxonomy.md  glossary.md  judge_quickstart.md  latency_memory.md  limitations.md  misuse_dual_use.md  negotiation_protocol.md  openenv_outreach.md  paper_neurips2026.md  reward_design.md  training_diagnostics.md  v2_error_analysis.md
docs/case_studies/: README.md  case_01_deepfake_ceo.md  case_02_digital_arrest.md  case_03_voice_clone_family.md
docs/fallbacks/: FALLBACK_A_per_difficulty_chart.md  FALLBACK_B_v1_v2_toggle.md
eval/: __init__.py  agreement.py  bootstrap_ci.py  build_final_plots.py  calibration_analysis.py  error_analysis.py  frontier_baseline.py  frontier_significance.py  grpo_lora_significance.py  known_vs_novel_split.py  leakage_clean_slice.py  mode_c_real_cases.py  per_rubric_ablation.py  permutation_test_v1_v2.py  plot_ablation_per_rubric.py  plot_coevolution.py  plot_leakage_clean_slice.py  plot_sft_vs_v2_fingerprint.py  plot_training_curves.py  redteam_analyzer.py  rupee_weighted_eval.py  scammer_frontier_baseline.py  scammer_significance.py  semantic_leakage_audit.py  single_scenario_eval.py  threshold_sweep.py  time_to_detection.py  traditional_ml_baselines.py
final_plots/: README.md
guidelines/: [External] Meta OpenEnv Hackathon Participant Help Guide.md  [External] OpenEnv Hackathon FAQs.md  submission_guidelines.md
logs/: ablation_episode_rollouts.json  ablation_study.json  analyzer_robustness.json  analyzer_robustness_lora_v2.json  b2_phase1_scammer_eval_n64.json  b2_phase1_scammer_eval_n64_bestof8.json  b2_phase1_scammer_training.json  b2_phase1_scammer_vs_v2_lora.json  baseline_day1.json  benign_augmented_v2_scripted_fpr.json  bootstrap_v2.json  bootstrap_v2_bca.json  calibration_sft.json  eval_sft.json  eval_sft_per_row.jsonl  eval_v2.json  eval_v2_known_novel.json  frontier_comparison.csv  frontier_significance.json  grpo_lora_significance.json  latency_memory_hf_space.json  leaderboard.jsonl  leakage_clean_slice.json  mode_c_scripted_baseline.json  mode_c_scripted_n135.json  permutation_test_v1_v2.json  rupee_weighted_eval.json  scammer_frontier_comparison.csv  scammer_frontier_comparison.json  scammer_significance.json  semantic_leakage_audit.json  sft_vs_grpo_comparison.json  time_to_detection.json  traditional_ml_baselines.json  v2_trainer_state.json
logs/frontier_cache/: hf-deepseek-r1:14dc0d6dfffd02e9.json  hf-deepseek-r1:5018b687cfe53d1a.json  hf-gpt-oss-120b:82bc0c58fa2303dd.json  hf-gpt-oss-120b:a200d139e55d4647.json  hf-gpt-oss-120b:b32c927d785053f6.json  hf-gpt-oss-120b:f91bafb1ed26bdcb.json
logs/scammer_frontier_cache/: hf-scammer-deepseek-v3-0324:0032f92f3de3cfcc.json  hf-scammer-deepseek-v3-0324:14dbe32094bc954b.json  hf-scammer-deepseek-v3-0324:25d62cdfe271fb3f.json  hf-scammer-deepseek-v3-0324:487438734ec4cc74.json  hf-scammer-deepseek-v3-0324:5677e916a290212e.json  hf-scammer-deepseek-v3-0324:58ca6d9162a1a91a.json  hf-scammer-deepseek-v3-0324:651ffcc75c9ed92d.json  hf-scammer-deepseek-v3-0324:6a0d6800cf3fdf81.json  hf-scammer-deepseek-v3-0324:72cbdf89ee746c66.json  hf-scammer-deepseek-v3-0324:755bc9a2c0f56c96.json  hf-scammer-deepseek-v3-0324:83f984dba7242914.json  hf-scammer-deepseek-v3-0324:b7b9f201286dd61b.json  hf-scammer-deepseek-v3-0324:dddbc3f25ca8e415.json  (+69 more)
notebooks/: A100_b1_sft_vs_grpo.ipynb  A100_b2_phase2_analyzer_coevolved.ipynb  README.md  T4_b12_per_row_eval.ipynb  T4_b5_lora_redteam.ipynb  T4_or_A100_b2_phase1_scammer.ipynb  env_exploration.ipynb  plots_and_eval.ipynb  v2_per_row_eval_colab.ipynb  v2_retrain_safe.ipynb
scripts/: smoke_test.py
server/: __init__.py  adversary_lab.py  app.py  demo_ui.py  demo_v1_v2.py  diagnose_endpoint.py  episode_curator.py  eval_endpoint.py  input_sanitizer.py  leaderboard.py  redteam_handler.py  scammer_showcase.py
serving/: README.md  ollama_modelfile  vllm_compose.yml
tests/: test_benign_augmented_v2.py  test_demo.py  test_demo_v2.py  test_diagnose_endpoint.py  test_eval_endpoint.py  test_explanation_judge.py  test_frontier_baseline.py  test_grpo_reward.py  test_input_sanitizer.py  test_known_vs_novel_split.py  test_leaderboard.py  test_llm_analyzer.py  test_mcp_compliance.py  test_mode_c.py  test_negotiation.py  test_openenv.py  test_permutation_test_v1_v2.py  test_readme_invariants.py  test_redteam.py  test_redteam_tab.py  test_rubrics.py  test_rupee_weighted_rubric.py  test_smoke.py  test_training_data.py  test_v1_v2_toggle.py  test_v2_reward_parity.py
training/: grpo_analyzer.py  run_scripted_baseline.py  self_play_loop.py  train_colab.ipynb
(+5 files in other folders)
